   argument to the RequestStream constructor.  This value should never
   change during the life of the RequestStream, and thus should be set
   in the constructor.  Updated SharedSocket.getRequestStream() method.
 o Refactored SharedSocket constructor to take only a single argument
   of type ConnectionJDBC2.  Added some package-private getter methods
   to ConnectionJDBC2.

09/09/2005 - David Kilzer
 o Applied Mike's patch to fix a small bug with getProcedureColumns() in
   JtdsDatabaseMetaData and SQL Server 7.0 where the RETURN_VALUE
   parameter was not prefixed with an '@' character.

09/07/2005 - David Kilzer
 o Extracted code from the original Support.linkException() method to accept
   generic Exception objects.  Provided linkException() convenience methods
   for SQLException and SQLWarning classes.  Linked IOException thrown from
   ConnectionJDBC2.createNamedPipe() for connection timeouts using the new
   method.
 o Applied Mike's fix for bug [1273988] Insert UTF8 string fails when length
   is 255 (ASE12.5.2).

09/06/2005 - David Kilzer
 o Applied patch for bug [1277000] "All pipe instances are busy" error not
   handled properly.  Added TestAllPipInstancesAreBusy tool class which is
   used to manually reproduce the error.  Updated "loginTimeout" entry on
   FAQ.  Added more use of Support.linkException() in ConnectionJDBC2
   constructor.
 o Created new Support.isWindowsOS() method to consolidate duplicate code.
   Added SupportUnitTest class to test new method.

08/30/2005 - David Kilzer
 o Updated FAQ to reflect new behavior of the namedPipe parameter since
   patch [1122494] SQL Server Authentication & Named pipes was applied
   in jTDS 1.0.3.

07/27/2005 - Alin Sinpalean
 o Corrected bug [1245775] Column type inconsistency when useLOBs=false.

07/11/2005 - Alin Sinpalean
 o Applied Mike's fix for bugs [1234531] Dates before 01/01/1900 broken due to
   DateTime value markers and [1235845] getTimestamp() returns illegal value
   after getString().
