@@ -9,6 +9,7 @@ Changes from jTDS 1.1
  o Refactored SharedSocket constructor to take only a single argument
    of type ConnectionJDBC2.  Added some package-private getter methods
    to ConnectionJDBC2.
+ o Replaced SharedNamedPipe.instance() method with a public constructor.
 
 09/09/2005 - David Kilzer
  o Applied Mike's patch to fix a small bug with getProcedureColumns() in
